vulcan-1.4/kubernetes/template/whatnxt-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatnxt-app-deployment
  namespace: whatnxt
  labels:
    app: whatnxt-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whatnxt-app
  template:
    metadata:
      labels:
        app: whatnxt-app
    spec:
      containers:
      - name: whatnxt-app
        image: dkagitha/whatnxt-app
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: whatnxt-app
  namespace: whatnxt
spec:
  selector:
    app: whatnxt-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
