vulcan-1.4/kubernetes/template/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: name 
    annotations: kubernetes.io/ingress.class: "whatnxt"
spec:
    rules:
        - host: whatnxt
          http:
          paths:
            - path: /
              backend:
                serviceName: whatnxt
                servicePort: 8080
